<resources>
    <string name="text1">We need your permissions so we can operate your files in your device. Click \u0027Grant\u0027 to continue.</string>
    <string name="text_cancel">Cancel</string>
    <string name="text2">Create</string>
    <string name="text3">NEW Sticker</string>
    <string name="text4">Download</string>
    <string name="text5">Home</string>
    <string name="text6">Exit</string>
    <string name="text7">You are not logged in</string>
    <string name="text8">View more</string>
    <string name="text9">Loading sticker list...</string>
    <string name="text10">Add</string>
    <string name="text11">Are you sure you want to delete this sticker?</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text12">Sticker Details</string>
    <string name="text13">Please input all field correctly</string>
    <string name="text14">Sticker added successfully</string>
    <string name="text15">Sorry, package name already used</string>
    <string name="text16">Enter package name:</string>
    <string name="text17">Sorry, WhatsApp requires 3 stickers per sticker pack, along with its tray icon, to add to WhatsApp.</string>
    <string name="text18">Add sticker</string>
    <string name="text19">Delete sticker pack</string>
    <string name="text20">Change tray icon</string>
    <string name="text21">Choose picture</string>
    <string name="text22">Enter sticker pack name:</string>
    <string name="text23">Sticker pack name</string>
    <string name="text24">Sticker pack with the same name already exists</string>
    <string name="text25">No files in this sticker pack</string>
    <string name="text26">Adding sticker pack to WhatsApp...</string>
    <string name="text27">done</string>
    <string name="text28">Crop Image</string>
    <string name="text29">Please make a cut pattern before cutting the image</string>
    <string name="text30">Are you sure you want to trash your edits away?</string>
    <string name="text31">Saving...</string>
    <string name="text32">No face detected</string>
    <string name="text33">About</string>
    <string name="text34">is an application that makes it easy for you to make stickers for WhatsApp or use stickers that you download from the internet to make export it to WhatsApp. This app also allows you to crop a face from someone\u0027s image to make a sticker. This application is available in 2 languages, namely Indonesian and English. The plan, some additional features will be included in this application. For example, such as automatic face cutting features and backup features. So, stay tuned and get the other best features! If there are questions and suggestions for adding other features, or ordering an application, please send an email to danaoscompany@gmail.com. We will respond to you as soon as possible!</string>
    <string name="text35">Ads</string>
    <string name="text36">Show relevant ads</string>
    <string name="text37">Allow third party to show relevant ads for you</string>
    <string name="text38">Settings</string>
    <string name="text39">Remove Ads</string>
    <string name="text40">No face detected</string>
    <string name="text41">This auto-crop feature uses Artificial Intelligence (AI). When you first use this auto-crop feature, you must be connected to the internet to allow us to download the AI ​​model.</string>
    <string name="text42">Try Again</string>
    <string name="text43">Cropping your picture...</string>
    <string name="text44">Undo</string>
    <string name="text45">Redo</string>
    <string name="text46">Edit Image</string>
    <string name="text47">Image</string>
    <string name="text48">Clip Art</string>
    <string name="text49">Emoticon</string>
    <string name="text50">Text</string>
    <string name="text51">Select Emoticon</string>
    <string name="text52">Default</string>
    <string name="text53">Custom</string>
    <string name="text54">Select Custom Emoticon</string>
    <string name="text55">Choose Image</string>
    <string name="text56">Select Clip Art</string>
    <string name="text57">Select Custom Clip Art</string>
    <string name="text58">Enter text:</string>
    <string name="text59">Text</string>
    <string name="text60">Select font:</string>
    <string name="text61">Please enter text</string>
    <string name="text62">Add Text</string>
    <string name="text63">Size:</string>
    <string name="text64">Color:</string>
    <string name="text65">Choose Color</string>
    <string name="text66">Custom Font</string>
    <string name="text67">Select custom font</string>
    <string name="text68">The file you selected is not a font file</string>
    <string name="text69">Birds</string>
    <string name="text70">Random</string>
    <string name="text71">Animal</string>
    <string name="text72">Birthday</string>
    <string name="text73">Cake</string>
    <string name="text74">Chicken</string>
    <string name="text75">Fair</string>
    <string name="text76">Food</string>
    <string name="text77">Medal</string>
    <string name="text78">Memes</string>
    <string name="text79">Owl</string>
    <string name="text80">Random</string>
    <string name="text81">Skull</string>
    <string name="text82">Thanksgiving</string>
    <string name="text83">Save</string>
    <string name="text84">Please add at least one image before saving</string>
    <string name="text85">Create new sticker pack</string>
    <string name="text86">Create new sticker</string>
    <string name="text87">Try our face auto detection feature. Click</string>
    <string name="text88">here</string>
    <string name="text89">More Stickers</string>
    <string name="text90">Sorry, you did not installed WhatsApp</string>
    <string name="text91">Add to WhatsApp</string>
    <string name="text92">Refresh to get new stickers</string>
    <string name="text93">Size</string>
    <string name="text94">Magic</string>
    <string name="text95">Downloading application data..</string>
    <string name="text96">Privacy Policy</string>
    <string name="text97">Terms of Use</string>
</resources>
