<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#ff000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ProgressBar
        android:layout_centerInParent="true"
        android:id="@+id/progress"
        android:layout_width="80dp"
        android:layout_height="80dp"/>

    <TextView
        android:id="@+id/text01"
        android:layout_below="@id/progress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="#ffffffff"
        android:text="@string/text43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/container01"
        android:background="@drawable/bg03"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="#ffffffff"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="64dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/text32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/container02"
        android:layout_marginTop="32dp"
        android:background="#ffffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="#ff000000"
            android:text="@string/text41"
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <Button
        android:visibility="gone"
        android:id="@+id/try_again"
        android:background="@drawable/bg04"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/container02"
        android:layout_marginTop="16dp"
        android:textColor="#ffffffff"
        android:text="@string/text42"
        android:stateListAnimator="@null"
        android:layout_width="200dp"
        android:layout_height="45dp" />

</RelativeLayout>