<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#ffffffff"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text01"
        android:text="@string/text58"
        android:textColor="#ff000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/text"
        android:background="@drawable/bg01"
        android:layout_below="@id/text01"
        android:layout_marginTop="16dp"
        android:textColor="#ff000000"
        android:textColorHint="#ffcccccc"
        android:hint="@string/text59"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="45dp" />

    <TextView
        android:id="@+id/text03"
        android:layout_marginTop="16dp"
        android:layout_below="@id/text"
        android:text="@string/text63"
        android:textColor="#ff000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Spinner
        android:id="@+id/text_size"
        android:layout_marginTop="28dp"
        android:layout_below="@id/text03"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text04"
        android:layout_toRightOf="@id/text_size"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_below="@id/text"
        android:text="@string/text64"
        android:textColor="#ff000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:id="@+id/text_color_ctr"
        android:layout_marginTop="16dp"
        android:layout_below="@id/text04"
        android:layout_toRightOf="@id/text_size"
        android:layout_marginLeft="16dp"
        android:background="#ff000000"
        android:layout_width="82dp"
        android:layout_height="52dp">

        <RelativeLayout
            android:id="@+id/text_color"
            android:clickable="true"
            android:layout_margin="1dp"
            android:background="#ffff0000"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/style_ctr"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_below="@id/text_color_ctr"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/plain"
            android:clickable="true"
            android:background="#ffdddddd"
            android:layout_width="51dp"
            android:layout_height="35dp">

            <ImageView
                android:layout_centerInParent="true"
                android:src="@drawable/plain"
                android:layout_width="25dp"
                android:layout_height="25dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bold"
            android:clickable="true"
            android:background="#ffffffff"
            android:layout_width="51dp"
            android:layout_height="35dp">

            <ImageView
                android:layout_centerInParent="true"
                android:src="@drawable/bold"
                android:layout_width="25dp"
                android:layout_height="25dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/italic"
            android:clickable="true"
            android:background="#ffffffff"
            android:layout_width="51dp"
            android:layout_height="35dp">

            <ImageView
                android:layout_centerInParent="true"
                android:src="@drawable/italic"
                android:layout_width="25dp"
                android:layout_height="25dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/underscore"
            android:clickable="true"
            android:background="#ffffffff"
            android:layout_width="51dp"
            android:layout_height="35dp">

            <ImageView
                android:layout_centerInParent="true"
                android:src="@drawable/underscore"
                android:layout_width="25dp"
                android:layout_height="25dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/strikethrough"
            android:clickable="true"
            android:background="#ffffffff"
            android:layout_width="51dp"
            android:layout_height="35dp">

            <ImageView
                android:layout_centerInParent="true"
                android:src="@drawable/strikethrough"
                android:layout_width="25dp"
                android:layout_height="25dp" />

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/text02"
        android:layout_marginTop="16dp"
        android:layout_below="@id/style_ctr"
        android:text="@string/text60"
        android:textColor="#ff000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:id="@+id/font_selector"
        android:clickable="true"
        android:layout_marginTop="16dp"
        android:layout_below="@id/text02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/font_preview"
            android:textSize="30sp"
            android:background="@drawable/bg06"
            android:text="Preview"
            android:textColor="#ff000000"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</RelativeLayout>