<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#ff000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/placeholder"
        android:src="@drawable/placeholder"
        android:layout_above="@+id/toolbar"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ImageView
        android:id="@+id/img"
        android:layout_above="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ImageView
        android:id="@+id/indicator"
        android:src="@drawable/indicator01"
        android:layout_width="25dp"
        android:layout_height="25dp" />

    <ImageView
        android:id="@+id/indicator2"
        android:src="@drawable/indicator02"
        android:layout_width="25dp"
        android:layout_height="25dp" />

    <RelativeLayout
        android:id="@+id/toolbar"
        android:background="@color/black"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_above="@+id/mode_ctr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text01"
                android:text="@string/text93"
                android:textColor="#ffffffff"
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <SeekBar
                android:id="@+id/size"
                android:max="100"
                android:progress="10"
                android:layout_toRightOf="@id/text01"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/mode_ctr"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--<RelativeLayout
                android:id="@+id/magic"
                android:clickable="true"
                android:background="@color/black"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/magic_icon"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/magic"
                    android:layout_centerHorizontal="true"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />

                <ImageView
                    android:id="@+id/magic_check"
                    android:visibility="gone"
                    android:layout_toRightOf="@id/magic_icon"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/check"
                    android:layout_width="20dp"
                    android:layout_height="20dp" />

                <TextView
                    android:layout_below="@id/magic_icon"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_centerHorizontal="true"
                    android:textColor="#ffffffff"
                    android:text="@string/text94"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/manual"
                android:clickable="true"
                android:background="@color/semi_black"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/manual_icon"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/eraser"
                    android:layout_centerHorizontal="true"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />

                <ImageView
                    android:id="@+id/manual_check"
                    android:layout_toRightOf="@id/manual_icon"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/check"
                    android:layout_width="20dp"
                    android:layout_height="20dp" />

                <TextView
                    android:layout_below="@id/manual_icon"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_centerHorizontal="true"
                    android:textColor="#ffffffff"
                    android:text="Manual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>-->

            <!-- UNDO -->

            <RelativeLayout
                android:id="@+id/undo"
                android:clickable="true"
                android:background="?selectableItemBackgroundBorderless"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/undo_icon"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/undo"
                    android:layout_centerHorizontal="true"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />

                <TextView
                    android:layout_below="@id/undo_icon"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_centerHorizontal="true"
                    android:textColor="#ffffffff"
                    android:text="@string/text44"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <!-- REDO -->

            <RelativeLayout
                android:id="@+id/redo"
                android:clickable="true"
                android:background="?selectableItemBackgroundBorderless"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/redo_icon"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/redo"
                    android:layout_centerHorizontal="true"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />

                <TextView
                    android:layout_below="@id/redo_icon"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_centerHorizontal="true"
                    android:textColor="#ffffffff"
                    android:text="@string/text45"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>